syntax = "proto3";

package shop;

message Shop {
  int32 id = 1;
  string name = 2;
  string address = 3;
  int32 productId = 4;
}

service ShopCRUDService {
  rpc GetShop (GetShopRequest) returns (GetShopResponse);
  rpc AddShop (AddShopRequest) returns (AddShopResponse);
  rpc UpdateShop (UpdateShopRequest) returns (UpdateShopResponse);
  rpc DeleteShop (DeleteShopRequest) returns (DeleteShopResponse);
  rpc AddShopProduct(AddShopProductRequest) returns (AddShopProductResponse);
}

message GetShopRequest {
  int32 id = 1;
  string name = 2;
  string address = 3;
}

message GetShopResponse {
  repeated Shop shops = 1;
}

message AddShopRequest {
  string name = 1;
  string address = 2;
}

message AddShopResponse {
  Shop shop = 1;
}

message UpdateShopRequest {
  int32 id = 1;
  string name = 2;
  string address = 3;
}

message UpdateShopResponse{
  Shop shop = 1;
}

message DeleteShopRequest{
  int32 id = 1;
}

message DeleteShopResponse {
  Shop shop = 1;
}

message AddShopProductRequest {
  int32 id = 1;
  int32 productId = 2;
}

message AddShopProductResponse {
  Shop shop = 1;
}






